[tool.poetry]
name = "transformer"
version = "0.1.0"
description = ""
authors = ["nutorbit <nutorbitx@gmail.com>"]
readme = "README.md"
packages = [
    { include = "transformer" },
]

[tool.poetry.dependencies]
python = "^3.8"
jax = "^0.4.1"
jaxlib = "^0.4.1"
dm-haiku = "^0.0.9"
optax = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
